# smpte-color-bars

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  REAME.md  resources.qrc  smpte.cpp  smpte.qml
